resolve the spacing and styling issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -96,3 +96,11 @@ cursor: pointer;
 ::-webkit-scrollbar {
   display: none;
 }
+.tex{
+  color: #FFF;
+
+/* web/heading/02 */
+font-family: 'SF Pro Display', sans-serif;
+
+
+}
